====================
liblunar-gtk-2.2.1
====================
NEWS:
	- 增加工具提示
	- 支持长格式的节日
	- 增加环境变量 LIBLUNAR_GTK_IGNORE_NON_CHINESE 支持，以让非中文环境的用户忽略农历。

====================
liblunar-gtk-2.2.0
====================
NEWS:
    - first release.